--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -1,9 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Roboto&display=swap')
 
+/*Responsive Breakpoints*/
+$breakpoint-mobile: 360px
+$breakpoint-tablet: 768px
+
 
 html
     box-sizing: border-box
     font-size: 10px
+    scroll-snap-type: y mandatory
 
 *, *:before, *:after
     box-sizing: inherit
@@ -13,14 +18,15 @@ html
 
 body
 
-
-
-
 #scroll-container
-    grid-area: content
 
 .scroll-slide
     min-height: 100vh
+    padding: 10rem 0 0
+    scroll-snap-align: start
+
+.sub-section
+
 
 
 /* Navigation */
@@ -30,7 +36,7 @@ body
     position: sticky
     top: 0
     bottom: 0
-    background-color: whitesmoke
+    // background-color: whitesmoke
 
     ul
         display: flex
@@ -39,7 +45,7 @@ body
 
         li
             list-style-type: none
-            margin-right: 4rem
+            margin-right: 3rem
 
             a
                 font-family: 'Concert One', cursive
@@ -50,10 +56,8 @@ body
                 &:hover
                     color: #FF4848
 
-
-@media only screen and (max-width: 720px)
-    #navbar
-
+    /* Mobile */
+    @media only screen and (max-width: $breakpoint-mobile)
         ul
             justify-content: center
 
@@ -62,11 +66,8 @@ body
 
                 a
                     font-size: 2.1rem
+
     
-
-
-
-
 /* TODO: Finish using JS in v2
 
     #sidenav
@@ -90,22 +91,215 @@ body
                     &:hover
                         color: #FF4848
 
-/* end of Navigation */
 
-/* Section: Home */
+/* Home */
 #typewriter
     font-family: 'Roboto', sans-serif
-    font-size: 4rem
+    font-size: 5rem
     word-wrap: anywhere
     max-width: 100%
     position: absolute
     top: 20%
     left: 7%
 
+    @media only screen and (max-width: 720px)
+            font-size: 3rem
 
-@media only screen and (max-width: 720px)
-    #typewriter
+
+
+/* About Me */
+#about
+    display: grid
+    grid-template-columns: repeat(3,1fr)
+    grid-auto-rows: max-content
+    grid-template-areas: "intro intro intro""services services services""skills skills skills""message message message"
+    grid-row-gap: 4rem
+    padding: 10rem 7% 0
+
+    .header
+        color: #1e836c
         font-size: 3rem
+        margin-bottom: 1.5rem
+        text-align: center
+    
+    .sub-header
+        color: #45b29a
+        font-size: 2.5rem
+        margin-bottom: 1.5rem
+
+    p
+        font-size: 2rem
 
 
-/* end of Section One*/
+    #about-introduction
+        grid-area: intro
+        display: flex
+        flex-direction: column
+        text-align: center
+
+
+    #about-services
+        grid-area: services
+        display: flex
+        flex-direction: column
+        max-width: 120rem
+        margin: auto auto
+
+
+        .card
+            display: grid
+            grid-template-columns: repeat(3, 1fr)
+            margin-bottom: 5rem
+
+            box-shadow: -1.2rem -1.2rem -1.2rem 0 rgba(255, 255, 255, 0.4)
+
+        .one
+            justify-items: center
+
+            .media
+                width: 15rem
+                order: 1
+
+                img
+                    max-width: 100%
+
+
+            .info
+                width: 100%
+                grid-column: span 2
+                order: 2
+
+        .two
+            justify-items: center
+
+            .media
+                width: 15rem
+                order: 2
+
+                img
+                    max-width: 100%
+
+            .info
+                width: 100%
+                grid-column: span 2
+                order: 1
+
+
+    #about-skills
+        grid-area: skills
+        text-align: center
+
+        .skills
+            .icon
+                display: inline-block
+
+                img
+                    width: 15rem
+
+
+    #about-message
+        grid-area: message
+        text-align: center
+
+        h2
+
+        p
+            margin-bottom: 3rem
+
+        button
+            width: 20rem
+            height: 5rem
+            background-color: #45b29a
+            border-radius: 0.5rem
+            
+            a
+                font-size: 2rem
+                color: #000
+                text-decoration: none
+
+
+    /* Mobile */
+    @media only screen and (max-width: $breakpoint-mobile)
+        padding: 8rem 7% 0
+
+        .header
+            font-size: 2.5rem
+            margin-bottom: 1rem
+
+        .sub-header
+            font-size: 1.9rem
+            margin-bottom: 1rem
+
+        p
+            font-size: 1.6rem
+
+        #about-services
+            .card
+                grid-template-columns: 1fr
+                text-align: center
+                margin-bottom: 2.5rem
+
+                .media
+                    margin-bottom: 2rem
+                    width: 10rem
+
+            .one
+                    .media
+                        order: 1
+                    
+                    .info
+                        order: 2
+
+            .two
+                .media
+                    order: 1
+                
+                .info
+                    order: 2
+
+
+    /* Tablet */
+    @media only screen and (max-width: $breakpoint-tablet)
+        padding: 8rem 7% 0
+
+        .header
+            font-size: 3rem
+            margin-bottom: 1rem
+
+        .sub-header
+            font-size: 2.5rem
+            margin-bottom: 1rem
+
+        p
+            font-size: 2rem
+
+        #about-services
+            .card
+                grid-template-columns: 1fr
+                text-align: center
+                margin-bottom: 2.5rem
+
+                .media
+                    margin-bottom: 2rem
+                    width: 10rem
+
+            .one
+                    .media
+                        order: 1
+                    
+                    .info
+                        order: 2
+
+            .two
+                .media
+                    order: 1
+                
+                .info
+                    order: 2
+
+#work
+    
+
+#contact
+
+
