--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -8,25 +8,14 @@ $breakpoint-tablet: 768px
 html
     box-sizing: border-box
     font-size: 10px
-    scroll-snap-type: y mandatory
+    // scroll-snap-type: y mandatory
 
 *, *:before, *:after
     box-sizing: inherit
     padding: 0
+    border: 0
     margin: 0
     // border: 1px red solid
-
-body
-
-#scroll-container
-
-.scroll-slide
-    min-height: 100vh
-    padding: 10rem 0 0
-    scroll-snap-align: start
-
-.sub-section
-
 
 
 /* Navigation */
@@ -51,10 +40,10 @@ body
                 font-family: 'Concert One', cursive
                 font-size: 3rem
                 text-decoration: none
-                color: #000
+                color: #001C4A
 
                 &:hover
-                    color: #FF4848
+                    color: #272AFE
 
     /* Mobile */
     @media only screen and (max-width: $breakpoint-mobile)
@@ -67,7 +56,6 @@ body
                 a
                     font-size: 2.1rem
 
-    
 /* TODO: Finish using JS in v2
 
     #sidenav
@@ -92,6 +80,16 @@ body
                         color: #FF4848
 
 
+#scroll-container
+    background-color: #F2F4FA
+
+.scroll-slide
+    min-height: 100vh
+    padding: 10rem 0 0
+    scroll-snap-align: start
+
+.sub-section
+
 /* Home */
 #typewriter
     font-family: 'Roboto', sans-serif
@@ -105,30 +103,29 @@ body
     @media only screen and (max-width: 720px)
             font-size: 3rem
 
-
-
 /* About Me */
 #about
     display: grid
     grid-template-columns: repeat(3,1fr)
     grid-auto-rows: max-content
     grid-template-areas: "intro intro intro""services services services""skills skills skills""message message message"
-    grid-row-gap: 4rem
+    grid-row-gap: 5rem
     padding: 10rem 7% 0
 
     .header
-        color: #1e836c
+        color: #001C4A
         font-size: 3rem
         margin-bottom: 1.5rem
         text-align: center
     
     .sub-header
-        color: #45b29a
+        color: #272AFE
         font-size: 2.5rem
         margin-bottom: 1.5rem
 
     p
         font-size: 2rem
+
 
 
     #about-introduction
@@ -148,16 +145,20 @@ body
 
         .card
             display: grid
-            grid-template-columns: repeat(3, 1fr)
-            margin-bottom: 5rem
+            grid-template-columns: repeat(5, 1fr)
+            border-radius: 0.6rem
+            background: #F2F4FA
+            box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #ffffff
+            padding: 1rem 2rem
+            margin-bottom: 4rem
 
-            box-shadow: -1.2rem -1.2rem -1.2rem 0 rgba(255, 255, 255, 0.4)
 
         .one
             justify-items: center
+            align-items: center
 
             .media
-                width: 15rem
+                width: 10rem
                 order: 1
 
                 img
@@ -166,14 +167,14 @@ body
 
             .info
                 width: 100%
-                grid-column: span 2
+                grid-column: span 4
                 order: 2
 
         .two
             justify-items: center
 
             .media
-                width: 15rem
+                width: 10rem
                 order: 2
 
                 img
@@ -181,42 +182,88 @@ body
 
             .info
                 width: 100%
-                grid-column: span 2
+                grid-column: span 4
                 order: 1
 
 
     #about-skills
         grid-area: skills
-        text-align: center
+        margin: 0 auto
 
         .skills
-            .icon
-                display: inline-block
+            text-align: center
+            margin-bottom: 2rem
+            
+            .skill-icons
+                display: flex
 
-                img
-                    width: 15rem
+                li
+                    display: flex
+                    justify-content: center
+                    
 
+                    list-style-type: none
+                    background: #F2F4FA
+                    height: 11rem
+                    width: 11rem
+                    border-radius: 50%
+                    box-shadow: inset 5px 5px 5px 0px #d1d9e6, inset -4px -4px 4px 0px #ffffff
+                    margin: 0 2rem
+
+                    i
+                        align-self: center
+                        font-size: 6rem
+
+                    .html5:hover
+                        color: #DD4B25
+                        transform: scale(1.2)
+
+                    .css3:hover
+                        color: #016DB4
+                        transform: scale(1.2)
+
+                    .js:hover
+                        color: #EFD81D
+                        transform: scale(1.2)
+
+                    .python:hover
+                        color: #346D9D
+                        transform: scale(1.2)
 
     #about-message
         grid-area: message
         text-align: center
 
-        h2
+        .card
+            padding: 2rem
+            background-color: #F2F4FA
+            width: 80%
+            margin: 0 auto
 
-        p
-            margin-bottom: 3rem
-
-        button
-            width: 20rem
-            height: 5rem
-            background-color: #45b29a
-            border-radius: 0.5rem
+            border-radius: 2%
+            box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #ffffff
             
-            a
-                font-size: 2rem
-                color: #000
-                text-decoration: none
+            h2
 
+            p
+                margin-bottom: 3rem
+
+            button
+                width: 25rem
+                height: 5rem
+                border-radius: 1.2rem
+                background: #fefffe
+                box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #ffffff
+                
+                a
+                    font-size: 2rem
+                    font-weight: bold
+                    color: #272AFE
+                    text-decoration: none
+
+                &:hover
+                    box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #ffffff
+                    transform: scale(1.05)
 
     /* Mobile */
     @media only screen and (max-width: $breakpoint-mobile)
@@ -298,8 +345,99 @@ body
                     order: 2
 
 #work
-    
+    display: grid
+    grid-template-columns: repeat(3,1fr)
+    grid-auto-rows: max-content
+    grid-template-areas: "header header header" "portfolio portfolio portfolio"
+    margin: 0 auto
+    width: 86%
+
+    h2
+        grid-area: header
+        font-family: 'Poppins', sans-serif
+        font-size: 6rem
+        color: #151617
+        margin-bottom: 3rem
+
+    .portfolio
+        grid-area: portfolio
+
+        .project
+            display: flex
+            flex-direction: row
+            text-align: center
+            padding: 0.5rem
+            margin: 1rem
+            width: 100%
+
+            border-radius: 1rem
+            background: #e0e5eb
+            box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #ffffff
+
+            div
+                max-width: 60%
+                text-align: start
+
+                img
+                    max-width: 95%
+                    justify: flex-start
+
+            .project-info
+                width: 100%
+                margin: 1rem auto
+
+                p
+                    font-size: 2.5rem
+                    margin: 1rem auto
+                
+                ul
+                    display: flex
+                    flex-direction: row
+                    list-style-type: none
+                    justify-content: center
+                    border: 2px solid yellow
+                    width: min-content
+                    margin: 0 auto
+                    background-color: yellow
+                    border-radius: 1rem
+                    background: #e0e5eb
+                    box-shadow: 5px 5px 5px 0px #d1d9e6 inset, -4px -4px 4px 0px #ffffff inset
+
+                    li
+                        padding: 1rem
+                        font-size: 2rem
+
 
 #contact
+    width: 86%
+    margin: 0 auto
 
+    form
+        width: 100%
+        margin: 0 auto
+        padding: 1rem
+        border-radius: 2%
+        box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #ffffff
+        
+        h2
+            font-size: 3rem
+            padding: 2rem
+
+        input
+            width: 40%
+            font-size: 2rem
+            padding: 0.7rem
+            margin: 0.5rem
+            border-radius: 0.6rem
+            background: #F2F4FA
+            box-shadow: inset 5px 5px 5px 0px #d1d9e6, inset -4px -4px 4px 0px #ffffff
+
+        #email, #subject, #enquiry
+            width: 82%
+
+        #submit
+            box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #ffffff
+            
+            &:hover
+                transform: scale(1.05)
 
