--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Roboto&display=swap')
 
 /*Responsive Breakpoints*/
-$breakpoint-mobile: 360px
+$breakpoint-mobile: 375px
 $breakpoint-tablet: 768px
 
 
 html
     box-sizing: border-box
     font-size: 10px
+    font-family: 'Poppins', sans-serif
     // scroll-snap-type: y mandatory
 
 *, *:before, *:after
@@ -17,24 +18,36 @@ html
     margin: 0
     // border: 1px red solid
 
+#scroll-container
+    background-color: #F2F4FA
 
-/* Navigation */
+.scroll-slide
+    min-height: 100vh
+    max-width: 85vw
+    margin: 0 auto
+    scroll-snap-align: start
+    overflow: hidden
+
+.sub-section
+
+
+/* Sticky Navbar */
 #navbar
-    display: grid
-    grid-template: 50px / auto
     position: sticky
     top: 0
     bottom: 0
-    // background-color: whitesmoke
+    background-color: #F2F4FA
+    overflow: hidden
 
     ul
         display: flex
         flex-direction: row
         justify-content: flex-end
 
+
         li
             list-style-type: none
-            margin-right: 3rem
+            margin: 1rem
 
             a
                 font-family: 'Concert One', cursive
@@ -54,45 +67,11 @@ html
                 margin: 1rem
 
                 a
-                    font-size: 2.1rem
+                    font-size: 2.4rem
 
-/* TODO: Finish using JS in v2
-
-    #sidenav
-        grid-area: sidenav
-        position: fixed
-        top: 50%
-        left: 2.5%
-
-        display: grid
-        grid-template: 1fr / 5, 1fr 
-
-        ul
-            li
-                list-style-type: none
-
-                a
-                    font-size: 4rem
-                    text-decoration: none
-                    color: #000
-
-                    &:hover
-                        color: #FF4848
-
-
-#scroll-container
-    background-color: #F2F4FA
-
-.scroll-slide
-    min-height: 100vh
-    padding: 10rem 0 0
-    scroll-snap-align: start
-
-.sub-section
 
 /* Home */
 #typewriter
-    font-family: 'Roboto', sans-serif
     font-size: 5rem
     word-wrap: anywhere
     max-width: 100%
@@ -110,7 +89,7 @@ html
     grid-auto-rows: max-content
     grid-template-areas: "intro intro intro""services services services""skills skills skills""message message message"
     grid-row-gap: 5rem
-    padding: 10rem 7% 0
+    padding-top: 5rem
 
     .header
         color: #001C4A
@@ -127,7 +106,6 @@ html
         font-size: 2rem
 
 
-
     #about-introduction
         grid-area: intro
         display: flex
@@ -141,6 +119,7 @@ html
         flex-direction: column
         max-width: 120rem
         margin: auto auto
+        padding: 0 1rem
 
 
         .card
@@ -151,6 +130,7 @@ html
             box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #ffffff
             padding: 1rem 2rem
             margin-bottom: 4rem
+            max-width: 100%
 
 
         .one
@@ -267,7 +247,6 @@ html
 
     /* Mobile */
     @media only screen and (max-width: $breakpoint-mobile)
-        padding: 8rem 7% 0
 
         .header
             font-size: 2.5rem
@@ -307,7 +286,6 @@ html
 
     /* Tablet */
     @media only screen and (max-width: $breakpoint-tablet)
-        padding: 8rem 7% 0
 
         .header
             font-size: 3rem
@@ -344,13 +322,14 @@ html
                 .info
                     order: 2
 
+
 #work
     display: grid
     grid-template-columns: repeat(3,1fr)
     grid-auto-rows: max-content
     grid-template-areas: "header header header" "portfolio portfolio portfolio"
     margin: 0 auto
-    width: 86%
+    padding-top: 5rem
 
     h2
         grid-area: header
@@ -411,6 +390,8 @@ html
 #contact
     width: 86%
     margin: 0 auto
+    padding-top: 5rem
+    
 
     form
         width: 100%
