--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Concert+One&family=Roboto&display=swap");
-/*Responsive Breakpoints*/
+/* Responsive Breakpoints */
+/* Auto-prefixer mixin */
+/* Colours */
 html {
   box-sizing: border-box;
   font-size: 10px;
   font-family: "Poppins", sans-serif;
+  scroll-snap-type: y mandatory;
 }
 
 *, *:before, *:after {
@@ -19,90 +22,125 @@ html {
 
 .scroll-slide {
   min-height: 100vh;
-  max-width: 85vw;
-  margin: 0 auto;
+  width: 90vw;
+  max-width: 110rem;
+  margin: auto;
   scroll-snap-align: start;
   overflow: hidden;
 }
 
-/* Sticky Navbar */
+.header {
+  color: #2E3532;
+  font-size: 3.2rem;
+  margin-bottom: 1.5rem;
+  text-align: center;
+}
+
+.sub-header {
+  color: #054A91;
+  font-size: 2.5rem;
+  margin-bottom: 1.5rem;
+}
+
+p {
+  font-size: 2rem;
+}
+
+/* NAVBAR */
 #navbar {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-areas: ". nav";
   position: sticky;
   top: 0;
   bottom: 0;
   background-color: #F2F4FA;
   overflow: hidden;
-  /* Mobile */
+  margin: auto;
+  width: 95%;
+  padding: 0.5rem 1rem;
+  border-radius: 1rem;
+  box-shadow: -7px -7px 17px #fff, 7px 7px 17px rgba(70, 70, 70, 0.15);
 }
 #navbar ul {
+  grid-area: nav;
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-self: flex-end;
+  width: max-content;
+  border: 2px solid #f7f7f7;
+  border-radius: 1rem;
+  box-shadow: -7px -7px 17px #fff, 7px 7px 17px rgba(70, 70, 70, 0.15);
+  overflow: hidden;
 }
 #navbar ul li {
   list-style-type: none;
-  margin: 1rem;
 }
 #navbar ul li a {
-  font-family: "Concert One", cursive;
-  font-size: 3rem;
+  display: inline-block;
+  font-size: 2.3rem;
+  line-height: 3.5rem;
   text-decoration: none;
+  padding: 0 2rem;
   color: #001C4A;
 }
-#navbar ul li a:hover {
-  color: #272AFE;
-}
-@media only screen and (max-width: 375px) {
-  #navbar ul {
-    justify-content: center;
-  }
-  #navbar ul li {
-    margin: 1rem;
-  }
-  #navbar ul li a {
-    font-size: 2.4rem;
-  }
+#navbar ul li a:hover, #navbar ul li a:active {
+  background: #15A3FF;
+  color: #ffffff;
+  box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #ffffff;
 }
 
-/* Home */
-#typewriter {
+/* HOME */
+#home #typewriter {
   font-size: 5rem;
   word-wrap: anywhere;
   max-width: 100%;
   position: absolute;
-  top: 20%;
+  top: 15%;
   left: 7%;
 }
-@media only screen and (max-width: 720px) {
-  #typewriter {
-    font-size: 3rem;
-  }
+#home .socialmedia-icons {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  width: min-content;
+  position: absolute;
+  right: 0%;
+  bottom: 20%;
+}
+#home .socialmedia-icons li {
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  width: 6rem;
+  height: 6rem;
+  list-style-type: none;
+  margin: 1rem;
+  border-radius: 50%;
+  box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #ffffff;
+}
+#home .socialmedia-icons li a {
+  margin: auto auto;
+}
+#home .socialmedia-icons li a i {
+  font-size: 4rem;
+  color: #000000c9;
+}
+#home .socialmedia-icons li a .fa-github:hover {
+  color: #171515;
+}
+#home .socialmedia-icons li a .fa-linkedin:hover {
+  color: #0076B4;
 }
 
-/* About Me */
+/* ABOUT */
 #about {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: max-content;
   grid-template-areas: "intro intro intro" "services services services" "skills skills skills" "message message message";
   grid-row-gap: 5rem;
-  padding-top: 5rem;
-  /* Mobile */
-  /* Tablet */
-}
-#about .header {
-  color: #001C4A;
-  font-size: 3rem;
-  margin-bottom: 1.5rem;
-  text-align: center;
-}
-#about .sub-header {
-  color: #272AFE;
-  font-size: 2.5rem;
-  margin-bottom: 1.5rem;
-}
-#about p {
-  font-size: 2rem;
+  padding-top: 9rem;
 }
 #about #about-introduction {
   grid-area: intro;
@@ -114,7 +152,7 @@ html {
   grid-area: services;
   display: flex;
   flex-direction: column;
-  max-width: 120rem;
+  max-width: 100%;
   margin: auto auto;
   padding: 0 1rem;
 }
@@ -169,6 +207,8 @@ html {
 }
 #about #about-skills .skills .skill-icons {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 #about #about-skills .skills .skill-icons li {
   display: flex;
@@ -179,7 +219,7 @@ html {
   width: 11rem;
   border-radius: 50%;
   box-shadow: inset 5px 5px 5px 0px #d1d9e6, inset -4px -4px 4px 0px #ffffff;
-  margin: 0 2rem;
+  margin: 1rem 2rem;
 }
 #about #about-skills .skills .skill-icons li i {
   align-self: center;
@@ -206,10 +246,10 @@ html {
   text-align: center;
 }
 #about #about-message .card {
+  width: 90%;
   padding: 2rem;
   background-color: #F2F4FA;
-  width: 80%;
-  margin: 0 auto;
+  margin: 0 auto 0.5rem;
   border-radius: 2%;
   box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #ffffff;
 }
@@ -217,187 +257,271 @@ html {
   margin-bottom: 3rem;
 }
 #about #about-message .card button {
-  width: 25rem;
+  width: 20rem;
   height: 5rem;
   border-radius: 1.2rem;
-  background: #fefffe;
+  background: #F2F4FA;
   box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #ffffff;
 }
 #about #about-message .card button a {
   font-size: 2rem;
   font-weight: bold;
-  color: #272AFE;
+  color: #19630A;
   text-decoration: none;
 }
 #about #about-message .card button:hover {
   box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #ffffff;
   transform: scale(1.05);
 }
-@media only screen and (max-width: 375px) {
-  #about .header {
-    font-size: 2.5rem;
-    margin-bottom: 1rem;
-  }
-  #about .sub-header {
-    font-size: 1.9rem;
-    margin-bottom: 1rem;
-  }
-  #about p {
-    font-size: 1.6rem;
-  }
-  #about #about-services .card {
-    grid-template-columns: 1fr;
-    text-align: center;
-    margin-bottom: 2.5rem;
-  }
-  #about #about-services .card .media {
-    margin-bottom: 2rem;
-    width: 10rem;
-  }
-  #about #about-services .one .media {
-    order: 1;
-  }
-  #about #about-services .one .info {
-    order: 2;
-  }
-  #about #about-services .two .media {
-    order: 1;
-  }
-  #about #about-services .two .info {
-    order: 2;
-  }
+#about #about-message #about-services .card {
+  grid-template-columns: 1fr;
+  text-align: center;
+  margin-bottom: 2.5rem;
 }
-@media only screen and (max-width: 768px) {
-  #about .header {
-    font-size: 3rem;
-    margin-bottom: 1rem;
-  }
-  #about .sub-header {
-    font-size: 2.5rem;
-    margin-bottom: 1rem;
-  }
-  #about p {
-    font-size: 2rem;
-  }
-  #about #about-services .card {
-    grid-template-columns: 1fr;
-    text-align: center;
-    margin-bottom: 2.5rem;
-  }
-  #about #about-services .card .media {
-    margin-bottom: 2rem;
-    width: 10rem;
-  }
-  #about #about-services .one .media {
-    order: 1;
-  }
-  #about #about-services .one .info {
-    order: 2;
-  }
-  #about #about-services .two .media {
-    order: 1;
-  }
-  #about #about-services .two .info {
-    order: 2;
-  }
+#about #about-message #about-services .card .media {
+  margin-bottom: 2rem;
+  width: 10rem;
+}
+#about #about-message #about-services .one .media {
+  order: 1;
+}
+#about #about-message #about-services .one .info {
+  order: 2;
+}
+#about #about-message #about-services .two .media {
+  order: 1;
+}
+#about #about-message #about-services .two .info {
+  order: 2;
 }
 
+/* WORK */
 #work {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: max-content;
-  grid-template-areas: "header header header" "portfolio portfolio portfolio";
-  margin: 0 auto;
-  padding-top: 5rem;
-}
-#work h2 {
-  grid-area: header;
-  font-family: "Poppins", sans-serif;
-  font-size: 6rem;
-  color: #151617;
-  margin-bottom: 3rem;
+  padding: 9rem 0 0;
 }
 #work .portfolio {
-  grid-area: portfolio;
+  margin: 0 auto;
 }
 #work .portfolio .project {
   display: flex;
-  flex-direction: row;
-  text-align: center;
+  flex-direction: column;
+  width: 86%;
   padding: 0.5rem;
-  margin: 1rem;
-  width: 100%;
+  margin: 1rem auto;
   border-radius: 1rem;
-  background: #e0e5eb;
   box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #ffffff;
 }
-#work .portfolio .project div {
-  max-width: 60%;
-  text-align: start;
+#work .portfolio .project .project-img {
+  margin: 0 auto;
+  max-width: 45rem;
 }
-#work .portfolio .project div img {
-  max-width: 95%;
-  justify: flex-start;
+#work .portfolio .project .project-img img {
+  max-width: 100%;
 }
 #work .portfolio .project .project-info {
-  width: 100%;
-  margin: 1rem auto;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  width: 86%;
+  text-align: center;
+  padding: 2.5rem 1rem 1rem;
 }
-#work .portfolio .project .project-info p {
+#work .portfolio .project .project-info .project-info-title {
   font-size: 2.5rem;
-  margin: 1rem auto;
+  margin: auto;
+  padding: 0 0 1.5rem;
 }
-#work .portfolio .project .project-info ul {
+#work .portfolio .project .project-info .project-info-description {
+  font-size: 1.8rem;
+  padding: 0 0 1.5rem;
+}
+#work .portfolio .project .project-info .project-info-languages {
   display: flex;
   flex-direction: row;
-  list-style-type: none;
-  justify-content: center;
-  border: 2px solid yellow;
   width: min-content;
   margin: 0 auto;
-  background-color: yellow;
-  border-radius: 1rem;
-  background: #e0e5eb;
-  box-shadow: 5px 5px 5px 0px #d1d9e6 inset, -4px -4px 4px 0px #ffffff inset;
+  list-style-type: none;
 }
-#work .portfolio .project .project-info ul li {
+#work .portfolio .project .project-info .project-info-languages li {
+  border-radius: 0.5rem;
   padding: 1rem;
-  font-size: 2rem;
+  margin: 0.5rem;
+  font-size: 1.5rem;
+  line-height: 1.5rem;
+  box-shadow: 5px 5px 5px 0px #D1D9E6, -4px -4px 4px 0px #ffffff;
+}
+#work .portfolio .project .project-info .project-info-languages .html5 {
+  color: #DD4B25;
+}
+#work .portfolio .project .project-info .project-info-languages .css3 {
+  color: #016DB4;
 }
 
-#contact {
+/* CONTACT */
+#scroll-container #contact {
+  min-height: max-content;
   width: 86%;
   margin: 0 auto;
-  padding-top: 5rem;
+  padding: 8rem 0.4rem;
 }
-#contact form {
-  width: 100%;
-  margin: 0 auto;
-  padding: 1rem;
+#scroll-container #contact .form-container {
+  max-width: 80rem;
   border-radius: 2%;
   box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #ffffff;
+  margin: 0 auto;
 }
-#contact form h2 {
+#scroll-container #contact form {
+  display: flex;
+  flex-wrap: wrap;
+  overflow: hidden;
+  padding: 1rem;
+}
+#scroll-container #contact form h2 {
   font-size: 3rem;
   padding: 2rem;
 }
-#contact form input {
-  width: 40%;
-  font-size: 2rem;
-  padding: 0.7rem;
-  margin: 0.5rem;
-  border-radius: 0.6rem;
+#scroll-container #contact form input {
+  font-size: 1.8rem;
+  padding: 1rem;
+  margin: 0.4rem 0.4rem;
   background: #F2F4FA;
+  border-radius: 0.6rem;
   box-shadow: inset 5px 5px 5px 0px #d1d9e6, inset -4px -4px 4px 0px #ffffff;
 }
-#contact form #email, #contact form #subject, #contact form #enquiry {
-  width: 82%;
+#scroll-container #contact form #name, #scroll-container #contact form #email {
+  min-width: 48.8%;
 }
-#contact form #submit {
+#scroll-container #contact form #subject, #scroll-container #contact form #message {
+  min-width: 100%;
+}
+#scroll-container #contact form #submit {
+  width: 30%;
   box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #ffffff;
 }
-#contact form #submit:hover {
+#scroll-container #contact form #submit:hover {
   transform: scale(1.05);
+}
+
+/* FOOTER */
+footer {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background: whitesmoke;
+}
+footer .socialmedia-icons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  order: 1;
+}
+footer .socialmedia-icons li {
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  width: 4rem;
+  height: 4rem;
+  list-style-type: none;
+  margin: 1rem;
+  border-radius: 20%;
+  box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #ffffff;
+}
+footer .socialmedia-icons li a {
+  margin: auto auto;
+}
+footer .socialmedia-icons li a i {
+  font-size: 3rem;
+  color: #000000c9;
+}
+footer .socialmedia-icons li a .fa-github:hover {
+  color: #171515;
+}
+footer .socialmedia-icons li a .fa-linkedin:hover {
+  color: #0076B4;
+}
+footer p {
+  color: black;
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding: 0.5rem;
+  order: 2;
+}
+
+/* MOBILE */
+@media only screen and (max-width: 500px) {
+  .header {
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+  }
+
+  .sub-header {
+    font-size: 1.9rem;
+    margin-bottom: 1rem;
+  }
+
+  p {
+    font-size: 1.6rem;
+  }
+
+  /* Navbar */
+  #navbar {
+    grid-template-columns: 1fr;
+    grid-template-areas: "nav";
+  }
+  #navbar ul {
+    justify-self: center;
+    justify-content: space-between;
+    width: 100%;
+  }
+  #navbar ul li a {
+    font-size: 2.1rem;
+    padding: 1rem;
+  }
+  #navbar ul li a:hover, #navbar ul li a:active {
+    background: #15A3FF;
+    color: #fff;
+    box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #ffffff;
+  }
+
+  /* HOME */
+  #home #typewriter {
+    font-size: 3rem;
+  }
+  #home .socialmedia-icons li {
+    width: 5rem;
+    height: 5rem;
+  }
+  #home .socialmedia-icons li i {
+    font-size: 3rem;
+  }
+
+  /* ABOUT */
+  #about #about-services .card {
+    grid-template-columns: 1fr;
+    text-align: center;
+    margin-bottom: 2.5rem;
+  }
+  #about #about-services .card .media {
+    margin-bottom: 2rem;
+    width: 10rem;
+  }
+  #about #about-services .one .media {
+    order: 1;
+  }
+  #about #about-services .one .info {
+    order: 2;
+  }
+  #about #about-services .two .media {
+    order: 1;
+  }
+  #about #about-services .two .info {
+    order: 2;
+  }
+
+  /* CONTACT */
+  #scroll-container #contact form input {
+    min-width: 100%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
