Fixed contact form box-shadows on ios safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -381,6 +381,8 @@ p {
   padding: 2rem;
 }
 #scroll-container #contact form input {
+  appearance: none;
+  -webkit-appearance: none;
   font-size: 1.8rem;
   padding: 1rem;
   margin: 0.4rem 0.4rem;
