--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Roboto&display=swap')
 
 /* Responsive Breakpoints */
-$breakpoint-mobile: 500px
+$breakpoint-mobile: 450px
 $breakpoint-tablet: 768px
 
 
@@ -394,9 +394,9 @@ p
                         color: $css-icon
 
 /* CONTACT */
-#scroll-container #contact
-    min-height: max-content
+#contact
     width: 86%
+    min-height: max-content
     margin: 0 auto
     padding: 8rem 0.4rem
     
@@ -417,20 +417,20 @@ p
             padding: 2rem
 
         input
-            appearance: none
-            -webkit-appearance: none
             font-size: 1.8rem
             padding: 1rem
             margin: 0.4rem 0.4rem
             background: #F2F4FA
             border-radius: 0.6rem
             box-shadow: inset 5px 5px 5px 0px #d1d9e6, inset -4px -4px 4px 0px #ffffff
+            appearance: none
+            -webkit-appearance: none
 
         #name, #email
-            min-width: 48.8%
+            width: 48.8%
 
         #subject, #message
-            min-width: 100%
+            width: 100%
 
         #submit
             width: 30%
@@ -488,7 +488,6 @@ footer
 
 /* MOBILE */
 @media only screen and (max-width: $breakpoint-mobile)
-
     .header
         font-size: 2.5rem
         margin-bottom: 1rem
@@ -500,6 +499,7 @@ footer
     p
         font-size: 1.6rem
 
+
     /* Navbar */
     #navbar
         grid-template-columns: 1fr
@@ -507,7 +507,7 @@ footer
 
         ul
             justify-self: center
-            justify-content: space-between
+            justify-content: space-around
             width: 100%
 
             li
@@ -521,7 +521,6 @@ footer
                         color: #fff
                         box-shadow: 5px 5px 5px 0px #d1d9e6, -4px -4px 4px 0px #ffffff
 
-    
     /* HOME */
     #home
 
@@ -534,7 +533,6 @@ footer
 
             i
                 font-size: 3rem
-
 
     /* ABOUT */
     #about
@@ -564,6 +562,6 @@ footer
                     order: 2
 
     /* CONTACT */
-    #scroll-container #contact
-        form input
-            min-width: 100%
+    #contact form
+        #name, #email
+            width: 100%
